# 3DRenderer

./: .gitignore  CMakeLists.txt  CREDITS.md
Resources/Shaders/: basicShader.frag  basicShader.vert
Src/: Camera.cpp  Camera.hpp  Debug.hpp  Input.cpp  Input.hpp  InputCallbacks.cpp  InputCallbacks.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp
